[fix] div aligns and images but doest not work

--- a/public/styles/captura.responsive.css
+++ b/public/styles/captura.responsive.css
@@ -27,10 +27,11 @@
     }
 
     #rewards #receive{
-        justify-content: center;
-        align-items: center;
-        margin-top: 0;
+        display: flex;
+        justify-content:stretch;
+        align-items: baseline;
         flex-direction: row;
+        margin-top: 0;
     }
 
     #rewards #get-group-button{
